layoutdir                     = $(includedir)/colibri/layout
layout_HEADERS                = layout.h pdclust.h

noinst_LTLIBRARIES            = libcolibri-layout.la
libcolibri_layout_la_SOURCES  = layout.c layout.h pdclust.c pdclust.h

INCLUDES                      = -iquote . -iquote $(top_srcdir) -iquote $(top_srcdir)/include
