reqhdir                    = $(includedir)/colibri/reqh
reqh_HEADERS               = reqh.h reqh_service.h
INCLUDES                   = -iquote . -iquote $(top_srcdir) \
			     -iquote $(top_srcdir)/include

noinst_LTLIBRARIES         = libcolibri-reqh.la

libcolibri_reqh_la_SOURCES = reqh.c reqh.h reqh_service.c reqh_service.h
