stobdir                     = $(includedir)/colibri/stob
stob_HEADERS                = ad.h linux_getevents.h linux.h \
                              linux_internal.h stob.h stob_id.h

libcolibri_stob_la_SOURCES  = stob.c stob.h linux.c linux.h \
                              linux_adieu.c linux_internal.h \
                              linux_getevents.h ad.c ad.h stob_id.c \
			      stob_id.h

noinst_LTLIBRARIES          = libcolibri-stob.la
